[tool.poetry]
name = "Battle-Game"
version = "1.0.0"
description = "My solution for the final project of the Digital People course."
authors = ["Sam Hirst <sam@hivemanchester.net>"]
license = "MIT"
readme = "README"
repository = "https://github.com/Naeviant/Battle-Game"

[tool.poetry.dependencies]
python = "^3.8"
guizero = "^1.3.0"
replit = "^3.2.4"
coverage = "^6.2"
pylint = "^2.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
